# db_app

./: Cargo.toml
entity/src/: demoprods.rs  mod.rs  prelude.rs  users.rs  yourtablename.rs
src/: .env  main.rs
