[package]
name = "db_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7"
actix-web = "4.0"
actix-cors = "0.5"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1", features = ["full"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18"
dotenv = "0.15"
postgres = "0.19.7"

