[package]
name = "db_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix-cors = "0.6.4"
sea-orm = { version = "0.12.4", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1.33.0", features = ["full"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
rdotenv = "0.1.4"

